<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.dcsa.conformance</groupId>
	<artifactId>Conformance-Gateway</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<spring.boot.version>3.4.4</spring.boot.version>
		<jackson.version>2.18.3</jackson.version>
		<lombok.version>1.18.36</lombok.version>
		<log4j.version>2.24.3</log4j.version>
		<slf4j.version>2.0.16</slf4j.version>
		<junit.version>5.12.0</junit.version>
		<mockito.version>5.16.1</mockito.version>

		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>dcsaorg</sonar.organization>
		<sonar.projectKey>Conformance-Gateway</sonar.projectKey>
	</properties>

	<name>Conformance Framework parent</name>
	<url>https://dcsa.org/</url>

	<organization>
		<name>DCSA</name>
		<url>https://dcsa.org/</url>
	</organization>

	<modules>
		<module>core</module>
		<module>arrival-notice</module>
		<module>booking</module>
		<module>blueprint</module>
		<module>commercial-schedules</module>
		<module>ebl</module>
		<module>pint</module>
		<module>ebl-issuance</module>
		<module>ebl-surrender</module>
		<module>jit</module>
		<module>ovs</module>
		<module>tnt</module>
		<module>adoption</module>
		<module>cdk</module>
		<module>lambda</module>
		<module>sandbox</module>
		<module>specifications</module>
		<module>spring-boot</module>
		<module>booking-and-ebl</module>
        <module>standards-commons</module>
    </modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>cdk</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>booking</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>blueprint</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>commercial-schedules</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>ebl</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>ebl-issuance</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>ebl-surrender</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>pint</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>jit</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>ovs</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>tnt</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>adoption</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>booking-and-ebl</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>standards-commons</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>sandbox</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>arrival-notice</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>lambda</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>spring-boot</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.dcsa.conformance</groupId>
				<artifactId>specifications</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Jackson dependencies -->
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>${jackson.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-bom</artifactId>
				<version>${log4j.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.18.0</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- test scoped dependencies -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<junit.includedTags/>
				<junit.excludedTags>WebUI,Integration</junit.excludedTags>
			</properties>
		</profile>
		<profile>
			<id>webui</id>
			<properties>
				<junit.includedTags>WebUI</junit.includedTags>
				<junit.excludedTags>Integration</junit.excludedTags>
			</properties>
		</profile>
		<profile>
			<id>integration</id>
			<properties>
				<junit.includedTags>Integration</junit.includedTags>
				<junit.excludedTags>WebUI</junit.excludedTags>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<release>${maven.compiler.release}</release>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<id>prepare-jacoco</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- attached to Maven test phase -->
					<execution>
						<id>generate-jacoco-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.8</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring.boot.version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						-javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"
					</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.mockito</groupId>
						<artifactId>mockito-core</artifactId>
						<version>${mockito.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.2</version>
					<configuration>
						<groups>${junit.includedTags}</groups>
						<excludedGroups>${junit.excludedTags}</excludedGroups>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
